Added some js framework and potential dropdown idea to ht css java

--- a/index.html
+++ b/index.html
@@ -17,6 +17,14 @@
     <div>
         <div id="featured">Featured Meal of the Week</div>
         <nav>
+        <!-- What if we had this be a dropdown menu with clickable options? I think the code would look something like this
+             <div class="dropdown">
+                <button onclick="myFunction()" class="dropbtn">Dietary Preferences</button>
+                     <div id="theDropdown" class="dropdown-content">
+                        <button class="nav-btn" id="high-pro">High Protein</button>
+                        ""              ""
+            </div>
+            </div> -->
             <input type="text" placeholder="Search...">
                 <button class="nav-btn" id="high-pro">High Protein</button> <!-- upon each button click, use modal to gather users email address where recipes will be sent too-->
                 <button class="nav-btn" id="low-car">Low Carb</button>
