--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
     <link rel="stylesheet" href="./Develop/style.css">
     <title>Your Meals Your Way</title>
 </head>
@@ -17,9 +18,9 @@
     <div>
         <div id="featured">Featured Meal of the Week</div>
         <nav>
-            <input type="text" placeholder="Search...">
-                <button class="nav-btn" id="high-pro">High Protein</button> <!-- upon each button click, use modal to gather users email address where recipes will be sent too-->
-                <button class="nav-btn" id="low-car">Low Carb</button>
+            <input class="input is-rounded" type="text" placeholder="Rounded input">
+                <!-- <button class="nav-btn" id="high-pro">High Protein</button>    ..... upon each button click, use modal to gather users email address where recipes will be sent too?-->
+                <!-- <button class="nav-btn" id="low-car">Low Carb</button>
                 <button class="nav-btn" id="glut-free">Gluten-Free</button>
                 <button class="nav-btn" id="pale">Paleo</button>
                 <button class="nav-btn" id="veg">Vegan</button>
@@ -28,7 +29,7 @@
                 <button class="nav-btn" id="lun">Lunch</button>
                 <button class="nav-btn" id="din">Dinner</button>
                 <button class="nav-btn" id="snk">Snacks</button>
-                <button class="nav-btn" id="dess">Desserts</button>
+                <button class="nav-btn" id="dess">Desserts</button> -->
         </nav>
     </div>
     <!-- under the above nav features, potentially details all the capabilities of the app? ex. nutritional break down, step by step how tos, meals in under 20 minutes, etc. -->
@@ -36,6 +37,7 @@
     <h2>Kids Corner</h2>
     <div id="kids-featured">The Meals They Love Made Healthy</div>
 </div>
+
 
 <div>
     <ul>
