--- a/index.html
+++ b/index.html
@@ -1,25 +1,53 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<html>
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Recipe Finder</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
-    <link rel="stylesheet" href="./Develop/style.css">
-    <title>Your Meals Your Way</title>
-</head>
-<body>
-    <header>
-        <h1>Your Meals Your Way</h1>
-        <h2>Find your favorite meal and cater it to your nutritional goals and needs</h2>
-    </header>
-
-
-
-
-
-</body>
-<script src="./Develop/script.js"></script>
+  </head>
+  <body>
+  <section class="section">
+      <div class="columns is-mobile">
+          <div class="column is-half is-offset-one-quarter">
+                <div class="container">
+                    <h1 class="title">
+                        Your Meals Your Way
+                    </h1>
+                        <p class="subtitle">
+                            <strong>Your favorite meals catered your way to your own dietary needs!</strong>
+                        </p>
+                </div>
+            <div class="dropdown is-hoverable">
+                <div class="dropdown-trigger">
+                    <input class="input" type="text" placeholder="Search Recipes">
+                
+                    <button class="button" aria-haspopup="true" aria-controls="dropdown-menu4">
+                        <span>Dietary Restrictions</span>
+                        <span class="icon is-small">
+                            <i class="fas fa-angle-down" aria-hidden="true"></i>
+                        </span>
+                    </button>
+                </div>
+                <div class="dropdown-menu" id="dropdown-menu4" role="menu">
+                    <div class="dropdown-content">
+                        <div class="dropdown-item">
+                            <p>
+                                <button id = "vegan" class = "button is-small">vegan</button>
+                                <button id = "vegetarian" class = "button is-small">vegetarian</button>
+                                <button id = "gluten-free" class = "button is-small">gluten-free</button>
+                                <button id = "dairy-free" class = "button is-small">dairy-free</button>
+                                <button id = "kosher" class = "button is-small">kosher</button>
+                                <button id = "low-carb" class = "button is-small">low-carb</button>
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+  </section>
+  </body>
+  <script src="./Develop/script.js"></script>
 </html>
-
 
