--- a/index.html
+++ b/index.html
@@ -34,12 +34,12 @@
                             <div class="dropdown-item">
                                 <p>
                                     <!-- added clickboxes for each button but not exactly sure how necessary that is or how you make them work -->
-                                    <button id = "vegan" class = "button is-small is-primary mt-2">vegan <label class="checkbox"><input class="ml-2 mt-1" type="checkbox"></label></button>
-                                    <button id = "vegetarian" class = "button is-small is-link mt-2">vegetarian <label class="checkbox"><input class="ml-2 mt-1" type="checkbox"></label></button>
-                                    <button id = "gluten-free" class = "button is-small is-info mt-2">gluten-free <label class="checkbox"><input class="ml-2 mt-1" type="checkbox"></label></button>
-                                    <button id = "dairy-free" class = "button is-small is-success mt-2">dairy-free <label class="checkbox"><input class="ml-2 mt-1" type="checkbox"></label></button>
-                                    <button id = "kosher" class = "button is-small is-warning mt-2">kosher <label class="checkbox"><input class="ml-2 mt-1" type="checkbox"></label></button>
-                                    <button id = "low-carb" class = "button is-small is-danger mt-2">low-carb <label class="checkbox"><input class="ml-2 mt-1" type="checkbox"></label></button>
+                                    <button id = "vegan" class = "button is-small is-primary mt-2">Vegan <label class="checkbox"><input class="ml-2 mt-1" type="checkbox" name="settings"></label></button>
+                                    <button id = "vegetarian" class = "button is-small is-link mt-2">Vegetarian <label class="checkbox"><input class="ml-2 mt-1" type="checkbox" name="settings"></label></button>
+                                    <button id = "gluten-free" class = "button is-small is-info mt-2">Gluten-free <label class="checkbox"><input class="ml-2 mt-1" type="checkbox" name="settings"></label></button>
+                                    <button id = "dairy-free" class = "button is-small is-success mt-2">Dairy-free <label class="checkbox"><input class="ml-2 mt-1" type="checkbox" name="settings"></label></button>
+                                    <button id = "kosher" class = "button is-small is-warning mt-2">Kosher <label class="checkbox"><input class="ml-2 mt-1" type="checkbox" name="settings"></label></button>
+                                    <button id = "low-carb" class = "button is-small is-danger mt-2">Low-carb <label class="checkbox"><input class="ml-2 mt-1" type="checkbox" name="settings"></label></button>
                                 </p>
                             </div>
                         </div>
