--- a/secondpage.html
+++ b/secondpage.html
@@ -4,11 +4,12 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Hello Bulma!</title>
+    <link rel="stylesheet" href="./Develop/style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
   </head>
   <body>
     <section class="section">
-      <div class="column is-half is-offset-one-quarter">
+      <div class="column is-half is-offset-one-quarter has-text-centered">
         <div class="container">
             <h1 class="title">
               Your Meals Your Way
@@ -20,7 +21,7 @@
       </div>
       <!-- added buttons for different meal times made them different colors-->
       <div class="columns ">
-        <div class="column is-half is-offset-one-quarter">
+        <div class="column is-half is-offset-one-quarter has-text-centered">
           <button id="breakfast" class="button is-success">Breakfast</button>
           <button id="lunch" class="button is-warning">Lunch</button>
           <button id="dinner" class="button is-link">Dinner</button>
@@ -33,9 +34,9 @@
     <div id="box-1" class="card">
       <div class="card-content">
           <div class="media">
-              <figure class="image is-48x48">
-                <img src="https://bulma.io/images/placeholders/96x96.png" alt="Placeholder image">
-              </figure>
+            <figure class="image is-128x128">
+              <img src="https://bulma.io/images/placeholders/256x256.png">
+            </figure>
           </div>
             <div class="media-content"></div>
       </div>
@@ -47,9 +48,9 @@
     <div id="box-2" class="card">
       <div class="card-content">
           <div class="media">
-              <figure class="image is-48x48">
-                <img src="https://bulma.io/images/placeholders/96x96.png" alt="Placeholder image">
-              </figure>
+            <figure class="image is-128x128">
+              <img src="https://bulma.io/images/placeholders/256x256.png">
+            </figure>
           </div>
             <div class="media-content"></div>
       </div>
@@ -61,9 +62,9 @@
     <div id="box-3" class="card">
       <div class="card-content">
           <div class="media">
-              <figure class="image is-48x48">
-                <img src="https://bulma.io/images/placeholders/96x96.png" alt="Placeholder image">
-              </figure>
+            <figure class="image is-128x128">
+              <img src="https://bulma.io/images/placeholders/256x256.png">
+            </figure>
           </div>
             <div class="media-content"></div>
       </div>
@@ -75,9 +76,9 @@
     <div id="box-4" class="card">
       <div class="card-content">
           <div class="media">
-              <figure class="image is-48x48">
-                <img src="https://bulma.io/images/placeholders/96x96.png" alt="Placeholder image">
-              </figure>
+            <figure class="image is-128x128">
+              <img src="https://bulma.io/images/placeholders/256x256.png">
+            </figure>
           </div>
             <div class="media-content"></div>
       </div>
@@ -89,9 +90,9 @@
     <div id="box-5" class="card">
       <div class="card-content">
           <div class="media">
-              <figure class="image is-48x48">
-                <img src="https://bulma.io/images/placeholders/96x96.png" alt="Placeholder image">
-              </figure>
+            <figure class="image is-128x128">
+              <img src="https://bulma.io/images/placeholders/256x256.png">
+            </figure>
           </div>
             <div class="media-content"></div>
       </div>
@@ -103,9 +104,9 @@
     <div id="box-6" class="card">
       <div class="card-content">
           <div class="media">
-              <figure class="image is-48x48">
-                <img src="https://bulma.io/images/placeholders/96x96.png" alt="Placeholder image">
-              </figure>
+            <figure class="image is-128x128">
+              <img src="https://bulma.io/images/placeholders/256x256.png">
+            </figure>
           </div>
             <div class="media-content"></div>
       </div>
@@ -117,9 +118,9 @@
     <div id="box-7" class="card">
       <div class="card-content">
           <div class="media">
-              <figure class="image is-48x48">
-                <img src="https://bulma.io/images/placeholders/96x96.png" alt="Placeholder image">
-              </figure>
+            <figure class="image is-128x128">
+              <img src="https://bulma.io/images/placeholders/256x256.png">
+            </figure>
           </div>
             <div class="media-content"></div>
       </div>
@@ -131,9 +132,9 @@
     <div id="box-8" class="card">
       <div class="card-content">
           <div class="media">
-              <figure class="image is-48x48">
-                <img src="https://bulma.io/images/placeholders/96x96.png" alt="Placeholder image">
-              </figure>
+            <figure class="image is-128x128">
+              <img src="https://bulma.io/images/placeholders/256x256.png">
+            </figure>
           </div>
             <div class="media-content"></div>
       </div>
@@ -145,9 +146,9 @@
     <div id="box-9" class="card">
       <div class="card-content">
           <div class="media">
-              <figure class="image is-48x48">
-                <img src="https://bulma.io/images/placeholders/96x96.png" alt="Placeholder image">
-              </figure>
+            <figure class="image is-128x128">
+              <img src="https://bulma.io/images/placeholders/256x256.png">
+            </figure>
           </div>
             <div class="media-content"></div>
       </div>
@@ -159,9 +160,9 @@
     <div id="box-10" class="card">
       <div class="card-content">
           <div class="media">
-              <figure class="image is-48x48">
-                <img src="https://bulma.io/images/placeholders/96x96.png" alt="Placeholder image">
-              </figure>
+              <figure class="image is-128x128">
+  <img src="https://bulma.io/images/placeholders/256x256.png">
+</figure>
           </div>
             <div class="media-content"></div>
       </div>
