--- a/index.html
+++ b/index.html
@@ -61,7 +61,13 @@
                     <div class="media">
                         <figure class="image is-128x128">
                             <img src="https://bulma.io/images/placeholders/256x256.png">
-                          </figure>
+                        </figure>
+                        <ul class="ml-3 has-text-dark">
+                            <li id="recipe"></li>
+                            <li id="ingredients"></li>
+                            <li id="time-to-cook"></li>
+                            <li id="serves"></li>
+                          </ul>
                     </div>
                     <div class="media-content"></div>
                 </div>
