random api for recipe

--- a/index.html
+++ b/index.html
@@ -83,3 +83,7 @@
   <script src="./Develop/script.js"></script>
 </html>
 
+<!--<div>  <h1>Random Recipe Generator</h1>
+<h2>Brought to you by TheMealDB</h2></div>
+<br>
+    <div id="display"></div> -->
