added new js file/added api in new file for front screen

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             </div>
             <section class="section is-large">
                 <div class="card is-large">
-                    <div class="card-content">
+                    <div class="card-content" id="display-recipe"></div>>
                         <div class="media">
                             <figure class="image is-128x128">
                                 <img src="https://bulma.io/images/placeholders/256x256.png">
@@ -80,7 +80,7 @@
         
     </section>
   </body>
-  <script src="./Develop/script.js"></script>
+  <script src="./Develop/front.js"></script>
 </html>
 
 <!--<div>  <h1>Random Recipe Generator</h1>
