added new front css file and connected to front html

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Recipe Finder</title>
-    <link rel="stylesheet" href="./Develop/style.css">
+    <link rel="stylesheet" href="Develop/front.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
   </head>
   <body>
@@ -12,7 +12,7 @@
       <div class="columns is-mobile">
           <div class="column is-half is-offset-one-quarter has-text-centered">
                 <div class="container initial">
-                        <h1 class="title">
+                        <h1 class="title has-text-centered">
                             Your Meals Your Way
                         </h1>
                         <p class="subtitle">
@@ -62,9 +62,9 @@
                     </div>
                 </div>
             </div>
-            <section class="section is-large">
-                <div class="card is-large">
-                    <div class="card-content is-large mt-2" id="display-recipe"></div>
+            <section class="section">
+                <div class="content">
+                    <div class="card p-2 mt-2" id="display-recipe"></div>
                 </div>
             </section>
         
@@ -72,8 +72,3 @@
   </body>
   <script src="./Develop/front.js"></script>
 </html>
-
-<!--<div>  <h1>Random Recipe Generator</h1>
-<h2>Brought to you by TheMealDB</h2></div>
-<br>
-    <div id="display"></div> -->
