--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                     <div class="dropdown-menu" id="dropdown-menu4" role="menu">
                         <div class="dropdown-content">
                             <div class="dropdown-item">
-                                <p>
+                                <div>
                                     <!-- added clickboxes for each button but not exactly sure how necessary that is or how you make them work -->
                                     <button id = "vegan" class = "button is-small is-primary mt-2">Vegan <label class="checkbox"><input class="ml-2 mt-1" type="checkbox" name="settings"></label></button>
                                     <button id = "vegetarian" class = "button is-small is-link mt-2">Vegetarian <label class="checkbox"><input class="ml-2 mt-1" type="checkbox" name="settings"></label></button>
@@ -55,7 +55,7 @@
                                     <button id = "dairy-free" class = "button is-small is-success mt-2">Dairy-free <label class="checkbox"><input class="ml-2 mt-1" type="checkbox" name="settings"></label></button>
                                     <button id = "kosher" class = "button is-small is-warning mt-2">Kosher <label class="checkbox"><input class="ml-2 mt-1" type="checkbox" name="settings"></label></button>
                                     <button id = "low-carb" class = "button is-small is-danger mt-2">Low-carb <label class="checkbox"><input class="ml-2 mt-1" type="checkbox" name="settings"></label></button>
-                                </p>
+                                </div>
                             </div>
                             
                         </div>
