--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
                     <div class="dropdown-menu" id="dropdown-menu4" role="menu">
                         <div class="dropdown-content">
                             <div class="dropdown-item">
-                                <p>
+                                <p id="checkbox">
                                     <!-- added clickboxes for each button but not exactly sure how necessary that is or how you make them work -->
-                                    <button id = "vegan" class = "button is-small is-primary mt-2">Vegan <label class="checkbox"><input class="ml-2 mt-1" type="checkbox" name="settings"></label></button>
+                                    <button class = "button is-small is-primary mt-2">Vegan <label class="checkbox"><input id = "vegan" class="ml-2 mt-1" type="checkbox" name="settings"></label></button>
                                     <button id = "vegetarian" class = "button is-small is-link mt-2">Vegetarian <label class="checkbox"><input class="ml-2 mt-1" type="checkbox" name="settings"></label></button>
                                     <button id = "gluten-free" class = "button is-small is-info mt-2">Gluten-free <label class="checkbox"><input class="ml-2 mt-1" type="checkbox" name="settings"></label></button>
                                     <button id = "dairy-free" class = "button is-small is-success mt-2">Dairy-free <label class="checkbox"><input class="ml-2 mt-1" type="checkbox" name="settings"></label></button>
