made the script.js elements and added  api to them

--- a/secondpage.html
+++ b/secondpage.html
@@ -26,7 +26,7 @@
     Could also put multiple cards into content div to be able to target each card with info from api results-->
     <div id="card-container" class="card">
       
-      <div id="box" class="card m-2">
+      <div id="box" class="card has-text-centered m-2">
         <!-- <div class="card-content">
           <div class="recipe-title">
             <figure class="image is-128x128">
